# piquel-log

./: .gitignore  AGENTS.md  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml  deny.yml  docs.yml  fmt-lint.yml
src/: config.rs  error.rs  format.rs  layer.rs  lib.rs  sink.rs  sinks.rs  store.rs
src/sinks/: console.rs  file.rs  store.rs
tests/: file_output.rs  formatting.rs  init.rs  log_bridge.rs  log_bridge_with_file.rs  log_store.rs  runtime_backends.rs
