[package]
name = "piquel-log"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/piquel-fr/piquel-log"
rust-version = "1.94.0"
version = "0.0.1"
documentation = "https://docs.rs/piquel-log"
homepage = "https://piquel.fr" # TODO: should piquel.fr/piqueld of dirkengine.fr
authors = ["Piquel <contact@piquel.fr>"]

[dependencies]
anyhow = "1"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
log = { version = "0.4", optional = true }
tracing-log = { version = "0.2", optional = true, features = ["log-tracer", "std"] }

[features]
default = []

# All optional backends
full = ["file", "log"]

# Save logs to file, configurable at runtime.
file = []

# Convert `log` events to tracing events.
log = ["dep:log", "dep:tracing-log"]

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
pedantic = "warn"
unwrap_used = "warn"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["-Zunstable-options", "--cfg", "docsrs"]
